Persistant Memory Storage

--- a/static/interview.html
+++ b/static/interview.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Medical Pre-Screening - Interview</title>
-    <link rel="stylesheet" href="static/css/main.css">
-    <link rel="stylesheet" href="static/css/interview.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/interview.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         <header class="app-header">
             <div class="header-content">
                 <div class="logo-section">
-                    <img src="static/1hat-logo.png" alt="1hat Logo" class="logo-image">
+                    <img src="/static/1hat-logo.png" alt="1hat Logo" class="logo-image">
                     <h1>Assessment</h1>
                 </div>
                 <div class="step-indicator">
@@ -173,11 +173,12 @@
     </div>
 
     <!-- Scripts -->
-    <script src="static/js/api.js?v=1"></script>
+    <script src="/static/js/utils.js?v=5"></script>
+    <script src="/static/js/api.js?v=5"></script>
     <!-- Simple TTS Integration -->
-    <script src="static/js/simple-tts.js"></script>
+    <script src="/static/js/simple-tts.js"></script>
     <!-- Interview Script -->
-    <script src="static/js/interview.js?v=3"></script>
-    <script src="static/js/simple-voice.js?v=1"></script>
+    <script src="/static/js/interview.js?v=5"></script>
+    <script src="/static/js/simple-voice.js?v=1"></script>
 </body>
 </html>
